changes on links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
         <div class="social-menu">
             <ul>
-                <li><a href="https://facebook.com/sharer/sharer.php?u=" target="_blank" rel="noopener"
+                <li><a href="https://facebook.com/sharer/sharer.php?u=url=https://dev-suite.github.io/joke-generator/index.html" target="_blank" rel="noopener"
                         aria-label="Share on Facebook"><i class="fa fa-facebook"></i></a>
                 </li>
-                <li><a href="https://twitter.com/intent/tweet/?text="
+                <li><a href="https://twitter.com/intent/tweet/?text=Are you're bored? Check out this dry jokes. url=https://dev-suite.github.io/joke-generator/index.html"
                         target="_blank" rel="noopener" aria-label="Share on Twitter"><i class="fa fa-twitter"></i></a>
                 </li>
             </ul>
