--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
+
 <body>
     <a class="github-fork-ribbon right-top" href="https://github.com/Dev-suite" target="_blank"
         data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
@@ -31,10 +32,7 @@
 
         <div class="social-menu">
             <ul>
-                <li><a href="https://facebook.com/sharer/sharer.php?u=url=https://dev-suite.github.io/joke-generator/index.html" target="_blank" rel="noopener"
-                        aria-label="Share on Facebook"><i class="fa fa-facebook"></i></a>
-                </li>
-                <li><a href="https://twitter.com/intent/tweet/?text=Are you're bored? Check out this dry jokes. url=https://dev-suite.github.io/joke-generator/index.html"
+                <li><a href="https://twitter.com/intent/tweet/?text=Are you bored? Check out this dry jokes. url=https://dev-suite.github.io/joke-generator/index.html"
                         target="_blank" rel="noopener" aria-label="Share on Twitter"><i class="fa fa-twitter"></i></a>
                 </li>
             </ul>
